# pygobject-gtk-websocket-app

./: .gitignore  README.md  com.github.tenderowl.spacebeam.json  com.github.tenderowl.spacebeam.json~  meson.build
data/: com.github.tenderowl.spacebeam.appdata.xml.in  com.github.tenderowl.spacebeam.desktop.in  com.github.tenderowl.spacebeam.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  spacebeam.gresource.xml  spacebeam.in  window.py  window.ui
